--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,51 +1,73 @@
 :root {
   --r-background-color: #fff;
-  --r-main-font: "Source Sans Pro", serif, sans-serif;
+  --r-main-font: "Noto Sans", sans-serif;
+  --r-main-font-size: 28px;
   --r-main-color: #333;
   --r-heading-font: var(--r-main-font);
-  --r-heading-color: #333;
-  --r-subheading-font-weight: 500;
-  --r-main-font-size: 32px;
+  --r-heading-font-weight: 600;
+  --r-heading-color: #272932;
   --r-heading-letter-spacing: -2px;
   --r-heading-text-transform: none;
-  --r-code-font: "Liga Consolas", Consolas, monospace;
+  --r-code-font: "Fira Mono", monospace;
+  --r-link-color: #3371e3;
+  --r-link-color-hover: #6e99e9;
+  --r-link-color-dark: var(--r-link-color);
+  --r-accent-color: #f05d5e;
+  --r-code-hljs-bg-color: #272932;
+  --r-code-inline-bg-color: #fafafa;
+  --r-code-inline-color: #d8a47f;
 }
 
 .reveal .slides {
+  letter-spacing: -1px;
   text-align: left;
 }
-.reveal .slides blockquote,
-.reveal .slides p {
-  letter-spacing: -1px;
+.first-slide > h1 > span {
+  position: relative;
+  background-color: var(--r-accent-color);
+  color: #fff;
+  padding: 0 12px;
+  z-index: -1;
 }
-h1.subtitle,
+.first-slide > h2 {
+  --r-heading2-size: 0.99em;
+  border-left: 0;
+  padding-left: 0;
+  color: #aaa;
+  font-weight: 400;
+}
+h2,
+h3 {
+  border-left: 6px var(--r-accent-color) solid;
+  padding-left: 12px;
+}
 h2.subtitle,
 h3.subtitle,
 h4.subtitle,
 h5.subtitle,
 h6.subtitle {
-  color: #888;
-  margin-bottom: 0;
-  font-weight: 500;
-}
-h1.subtitle {
-  font-size: calc(0.8 * var(--r-heading1-size));
+  color: #aaa;
+  font-weight: 100;
+  --r-heading-line-height: 1;
+  --r-heading-letter-spacing: -2px;
+  margin-bottom: -5px;
 }
 h2.subtitle {
-  font-size: calc(0.8 * var(--r-heading2-size));
+  font-size: calc(0.6 * var(--r-heading2-size));
 }
 h3.subtitle {
-  font-size: calc(0.8 * var(--r-heading3-size));
+  font-size: calc(0.55 * var(--r-heading3-size));
 }
 h4.subtitle {
-  font-size: calc(0.8 * var(--r-heading4-size));
+  font-size: calc(0.5 * var(--r-heading4-size));
 }
 h5.subtitle {
-  font-size: calc(0.8 * var(--r-heading4-size));
+  font-size: calc(0.45 * var(--r-heading4-size));
 }
 .d-flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .justify-around {
   justify-content: space-around;
@@ -53,19 +75,38 @@ h5.subtitle {
 pre.code-wrapper {
   margin-left: 0;
   margin-right: 0;
+  width: 100%;
+}
+.hljs {
+  background: var(--r-code-hljs-bg-color);
 }
 code:not(.hljs) {
   font-size: 0.9em;
-  background-color: #fafafa;
-  color: #fe509c;
-  padding: 0.25em 0.4em;
+  background-color: var(--r-code-inline-bg-color);
+  color: var(--r-code-inline-color);
+  padding: 0.2em 0.4em;
+  letter-spacing: -2px;
+}
+.fw-bold {
+  font-weight: bold;
 }
 .text-center {
   text-align: center !important;
 }
-blockquote {
+.reveal blockquote {
+  padding: 5px 8px;
+  font-size: 0.8em;
   margin-left: 0 !important;
   margin-right: 0 !important;
+  color: #777;
+  background-color: var(--r-code-inline-bg-color);
+  box-shadow: none;
+}
+.reveal dd {
+  margin-left: 0;
+}
+.reveal dd + dt {
+  margin-top: 1em;
 }
 .small {
   font-size: 0.8em;
@@ -76,8 +117,14 @@ blockquote {
 .smallest {
   font-size: 0.6em;
 }
+.red {
+  color: var(--r-accent-color);
+}
 .ml-0 {
   margin-left: 0 !important;
+}
+.ml-1 {
+  margin-left: 1rem !important;
 }
 .my-0 {
   margin-top: 0 !important;
@@ -86,11 +133,23 @@ blockquote {
 .mb-0 {
   margin-bottom: 0 !important;
 }
+.mb-1 {
+  margin-bottom: 1rem !important;
+}
+.mb-2 {
+  margin-bottom: 2rem !important;
+}
+.mt-0 {
+  margin-top: 0 !important;
+}
 .mw-100 {
   max-width: 100%;
 }
-ul.margin > li {
+.margin > li + li {
   margin-top: 0.3em;
+}
+.margin.margin-sm > li + li {
+  margin-top: 0.15em;
 }
 .success {
   color: forestgreen;
@@ -99,23 +158,115 @@ ul.margin > li {
   color: indianred;
 }
 
+/* Sobre mim */
+#about-me {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 250px auto;
+  grid-row-gap: .75em;
+}
 #profile-pic {
   margin: 0 auto;
   max-width: 200px;
   border-radius: 50%;
 }
-#profile-pic + h4 {
+#profile-name {
+  margin: 0;
   font-size: 0.8em;
-  color: var(--r-link-color) !important;
+  font-weight: bold;
   letter-spacing: -1px;
+  text-align: center;
 }
 .about-me-links {
-  padding: 24px 0;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.7em;
+}
+.about-me-links > div {
+  display: flex;
+  position: relative;
+}
+.about-me-links > div + div {
+  margin-left: 1rem;
+}
+@media (min-width: 1024px) {
+  .about-me-links > div + div {
+    margin-left: 5rem;
+  }
+}
+.about-me-links > div > svg + div {
+  align-self: center;
+  margin-left: .5rem;
+}
+.about-me-links svg {
+  width: 48px;
+  height: 48px;
 }
 .about-me-links p {
   margin: 0;
   line-height: 1;
 }
 .about-me-links p + a {
+  position: static;
   font-weight: 600;
+}
+.about-me-links p + a:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  content: "";
+}
+
+/* Cronograma */
+.schedule {
+  display: flex;
+  margin: 1em -0.5em 0;
+}
+.schedule > div {
+  flex: 0 0 auto;
+  width: 50%;
+  padding: 0 0.5em;
+  box-sizing: border-box;
+}
+.schedule > div > div {
+  padding: 0.9em 1em;
+  background: #f5f5f5;
+}
+.schedule > div > div > p {
+  margin: 0;
+  font-weight: 600;
+}
+.schedule > div > div > p + span {
+  color: #999;
+  font-size: 0.8em;
+}
+
+/* SVGs */
+svg {
+  letter-spacing: 0;
+}
+.fill {
+  fill: var(--r-accent-color);
+}
+.about-me-links > div:hover .fill {
+  opacity: 0.9;
+}
+.fill-bg {
+  fill: var(--r-background-color);
+}
+
+/* Fragments */
+.reveal .slides section .fragment.step-fade-in-then-out,
+.reveal .slides section .fragment.step-fade-out.current-fragment {
+  opacity: 0;
+  display: none;
+}
+.reveal .slides section .fragment.step-fade-in-then-out.current-fragment,
+.reveal .slides section .fragment.step-fade-out {
+  opacity: 1;
+  display: inline;
+  visibility: visible;
 }
